force-app/main/default/objects/Booking__c/fields/Power_of_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Attorney__c</fullName>
    <label>Power of Attorney</label>
    <length>120</length>
    <type>Text</type>
</CustomField>