force-app/main/default/objects/Booking__c/fields/Push_To_CRM__c.field-meta.xml
<CustomField>
    <fullName>Push_To_CRM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Push To CRM</label>
    <type>Checkbox</type>
</CustomField>