force-app/main/default/objects/Booking__c/fields/Push_To_CRM_Date__c.field-meta.xml
<CustomField>
    <fullName>Push_To_CRM_Date__c</fullName>
    <label>Push To CRM Date</label>
    <type>DateTime</type>
</CustomField>