force-app/main/default/objects/Booking__c/fields/Rate_Per_Sqft_For__c.field-meta.xml
<CustomField>
    <fullName>Rate_Per_Sqft_For__c</fullName>
    <formula>Quote__r.Rate_sq_Ft_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Per Sqft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>