force-app/main/default/objects/Booking__c/fields/SAC_HSN_Code__c.field-meta.xml
<CustomField>
    <fullName>SAC_HSN_Code__c</fullName>
    <formula>&apos;gg&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAC/HSN Code</label>
    <type>Text</type>
</CustomField>