force-app/main/default/objects/Booking__c/fields/Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit__c</fullName>
    <label>Security Deposit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>