force-app/main/default/objects/Booking__c/fields/Servant_room_Key_No__c.field-meta.xml
<CustomField>
    <fullName>Servant_room_Key_No__c</fullName>
    <label>Servant room Key No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>