force-app/main/default/objects/Booking__c/fields/Servant_room_No_Of_Keys__c.field-meta.xml
<CustomField>
    <fullName>Servant_room_No_Of_Keys__c</fullName>
    <label>Servant room No Of Keys</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>