force-app/main/default/objects/Booking__c/fields/Shaft_room_Key_No__c.field-meta.xml
<CustomField>
    <fullName>Shaft_room_Key_No__c</fullName>
    <label>Shaft room Key No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>