force-app/main/default/objects/Booking__c/fields/Shaft_room_No_Of_Keys__c.field-meta.xml
<CustomField>
    <fullName>Shaft_room_No_Of_Keys__c</fullName>
    <label>Shaft room No. Of Keys</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>