force-app/main/default/objects/Booking__c/fields/Slab__c.field-meta.xml
<CustomField>
    <fullName>Slab__c</fullName>
    <label>Slab</label>
    <length>220</length>
    <type>Text</type>
</CustomField>