force-app/main/default/objects/Booking__c/fields/Spouse_Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Date_Of_Birth__c</fullName>
    <label>Spouse Date Of Birth</label>
    <type>Date</type>
</CustomField>