force-app/main/default/objects/Booking__c/fields/Stage1__c.field-meta.xml
<CustomField>
    <fullName>Stage1__c</fullName>
    <formula>TEXT(Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage Formula</label>
    <type>Text</type>
</CustomField>