force-app/main/default/objects/Booking__c/fields/Staircase_store_Key_No__c.field-meta.xml
<CustomField>
    <fullName>Staircase_store_Key_No__c</fullName>
    <label>Staircase store Key No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>