force-app/main/default/objects/Booking__c/fields/Staircase_store_No_Of_Keys__c.field-meta.xml
<CustomField>
    <fullName>Staircase_store_No_Of_Keys__c</fullName>
    <label>Staircase store No. Of Keys</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>