force-app/main/default/objects/Booking__c/fields/Swap_Applicant_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Swap_Applicant_Request_Status__c</fullName>
    <label>Swap Applicant Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>