force-app/main/default/objects/Booking__c/fields/Swap_Unit__c.field-meta.xml
<CustomField>
    <fullName>Swap_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Swap Unit</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Project__c</field>
            <operation>equals</operation>
            <valueField>Plot__c.Project__r.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Plot__c</referenceTo>
    <relationshipLabel>Bookings (Swap Unit)</relationshipLabel>
    <relationshipName>Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>