force-app/main/default/objects/Booking__c/fields/Terrace_door_Key_No__c.field-meta.xml
<CustomField>
    <fullName>Terrace_door_Key_No__c</fullName>
    <label>Terrace door Key No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>