force-app/main/default/objects/Booking__c/fields/Terrace_door_No_Of_Keys__c.field-meta.xml
<CustomField>
    <fullName>Terrace_door_No_Of_Keys__c</fullName>
    <label>Terrace door No. Of Keys</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>