force-app/main/default/objects/Booking__c/fields/Terrace_store_room_Key_No__c.field-meta.xml
<CustomField>
    <fullName>Terrace_store_room_Key_No__c</fullName>
    <label>Terrace store room Key No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>