force-app/main/default/objects/Booking__c/fields/Time_Extension_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Time_Extension_Approval_Status__c</fullName>
    <label>Time Extension Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>