force-app/main/default/objects/Booking__c/fields/Time_Extension_Requested__c.field-meta.xml
<CustomField>
    <fullName>Time_Extension_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Time Extension Requested</label>
    <type>Checkbox</type>
</CustomField>