force-app/main/default/objects/Booking__c/fields/Total_Infrastructure_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Infrastructure_Charges__c</fullName>
    <label>Total_Infrastructure_Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>