force-app/main/default/objects/Booking__c/fields/Total_Maintenance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Maintenance_Amount__c</fullName>
    <label>Total_Maintenance_Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>