force-app/main/default/objects/Booking__c/fields/Total_received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_received_Amount__c</fullName>
    <label>Total_received_Amount</label>
    <summarizedField>Receipt__c.Total_Received_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Receipt__c.Approval_status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Receipt__c.Payment_Type__c</field>
        <operation>notEqual</operation>
        <value>Additional Charges</value>
    </summaryFilterItems>
    <summaryForeignKey>Receipt__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>