force-app/main/default/objects/Booking__c/validationRules/Anniversary_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Anniversary_Date</fullName>
    <active>false</active>
    <errorConditionFormula>Anniverssary_Date1__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Please Select the Past Date</errorMessage>
</ValidationRule>