force-app/main/default/objects/Booking__c/validationRules/Cancellation_Stage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Stage_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!Is_Cancelled__c,ISPICKVAL(Stage__c, &apos;Cancellation&apos;) )</errorConditionFormula>
    <errorMessage>Stage cannot be changed to cancelled, Please request for cancellation</errorMessage>
</ValidationRule>