force-app/main/default/objects/Booking__c/validationRules/Indutry_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Indutry_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Industry__c == &apos;Other&apos;,
    ISBLANK(Other_Profession__c)
)</errorConditionFormula>
    <errorDisplayField>Other_Profession__c</errorDisplayField>
    <errorMessage>Please Fill Other Industry</errorMessage>
</ValidationRule>