force-app/main/default/objects/Booking__c/validationRules/Registration_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Registration_Check</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Stage__c, &quot;Registration&quot;),
  Pending_Amount__c &gt; 5,
  NOT(
    AND(
      ISPICKVAL(Funding_Type__c, &quot;Loan&quot;),
      DD_Uploaded__c
    )
  )
)</errorConditionFormula>
    <errorMessage>Pending Amount for the Flat is greater than Zero, Cannot move to registration</errorMessage>
</ValidationRule>