force-app/main/default/objects/Booking__c/validationRules/Registration_Section.validationRule-meta.xml
<ValidationRule>
    <fullName>Registration_Section</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Stage__c, &quot;Hand Over&quot;),
  OR(
    ISBLANK(Sale_Deed_Date__c),
    NOT(Sale_Deed_Uploaded__c),
    ISBLANK(Registration_Number__c),
    AND(
      ISPICKVAL(Funding_Type__c, &quot;Loan&quot;),
      NOT(DD_Uploaded__c)
    )
  )
)</errorConditionFormula>
    <errorMessage>Please fill all the mandatory fields in Sale Deed Section</errorMessage>
</ValidationRule>