force-app/main/default/objects/Booking__c/validationRules/Swapping_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Swapping_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!Is_Swapped__c,ISPICKVAL(Stage__c, &apos;Swapping&apos;) )</errorConditionFormula>
    <errorMessage>Stage cannot be changed to swapping, Please request for swapping</errorMessage>
</ValidationRule>