force-app/main/default/objects/Booking__c/validationRules/Validate_Other_Industry_Qualification.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Other_Industry_Qualification</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    OR(
        Industry__c = &quot;Other&quot;, 
        Qualification__c = &quot;Other&quot;  
    ),
    OR(
        ISBLANK(Other_Profession__c),
        ISBLANK(Other_Qualification__c)
    )
)</errorConditionFormula>
    <errorMessage>&quot;Please enter values for &apos;Other Industry&apos;</errorMessage>
</ValidationRule>