force-app/main/default/objects/Booking__c/validationRules/Validation_rule_for_Booking_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_rule_for_Booking_Stage</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT($Profile.Name = &quot;System Administrator&quot;),   /* Allow Admin */
    CASE(Stage__c,
        &quot;New&quot;, 1,
        &quot;Booked&quot;, 2,
        &quot;Agreement&quot;, 3,
        &quot;Demands &amp; Collections&quot;, 4,
        &quot;Registration&quot;, 5,
        &quot;Hand Over&quot;, 6,
        &quot;Swapping&quot;, 7,
        &quot;Cancellation&quot;, 8,
    0)
    &lt;
    CASE(PRIORVALUE(Stage__c),
        &quot;New&quot;, 1,
        &quot;Booked&quot;, 2,
        &quot;Agreement&quot;, 3,
        &quot;Demands &amp; Collections&quot;, 4,
        &quot;Registration&quot;, 5,
        &quot;Hand Over&quot;, 6,
        &quot;Swapping&quot;, 7,
        &quot;Cancellation&quot;, 8,
    0)
)</errorConditionFormula>
    <errorMessage>You can&apos;t go backward</errorMessage>
</ValidationRule>