force-app/main/default/objects/Booking__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Booking_Date__c</columns>
    <columns>Project__c</columns>
    <columns>Plot__c</columns>
    <columns>Stage__c</columns>
    <columns>Quote__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Payment_Plan__c</columns>
    <columns>Total_received_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>