force-app/main/default/objects/Booking__c/listViews/Last_Month.listView-meta.xml
<ListView>
    <fullName>Last_Month</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>SLead__c</columns>
    <columns>Project__c</columns>
    <columns>Funding_Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Plot__c</columns>
    <columns>Quote__c</columns>
    <columns>Booking_Date__c</columns>
    <columns>GRAND_TOTAL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Last Month</label>
</ListView>