force-app/main/default/objects/Booking__c/listViews/This_Week.listView-meta.xml
<ListView>
    <fullName>This_Week</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>SLead__c</columns>
    <columns>Project__c</columns>
    <columns>Funding_Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Plot__c</columns>
    <columns>Quote__c</columns>
    <columns>Booking_Date__c</columns>
    <columns>GRAND_TOTAL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>This Week</label>
</ListView>