force-app/main/default/objects/Booking__c/listViews/Today_s_Bookings.listView-meta.xml
<ListView>
    <fullName>Today_s_Bookings</fullName>
    <columns>NAME</columns>
    <columns>SLead__c</columns>
    <columns>Project__c</columns>
    <columns>Funding_Type__c</columns>
    <columns>Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Project_Type__c</columns>
    <columns>Plot__c</columns>
    <columns>Quote__c</columns>
    <columns>Booking_Amount__c</columns>
    <columns>GRAND_TOTAL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Todays Bookings</label>
</ListView>