force-app/main/default/objects/Booking__c/listViews/Zuari_Gangotri_Tribhuja.listView-meta.xml
<ListView>
    <fullName>Zuari_Gangotri_Tribhuja</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>SLead__c</columns>
    <columns>Project__c</columns>
    <columns>Funding_Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Plot__c</columns>
    <columns>Quote__c</columns>
    <columns>Booking_Date__c</columns>
    <columns>GRAND_TOTAL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Zuari Gangotri Tribhuja</value>
    </filters>
    <label>Zuari Gangotri Tribhuja</label>
</ListView>